show patients list

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -126,16 +126,13 @@ body {
 	<div class="login-page">
 		<div class="form">
 			<form class="login-form" action="LoginController" method="post">
-				<input name="username" type="text" placeholder="Benutzername" /> <input
-					name="password" type="password" placeholder="Kennwort" />
+				<input name="username" type="text" placeholder="Benutzername" /> 
+				<input name="password" type="password" placeholder="Kennwort" />
 				<button>login</button>
-				<p class="message">
-					Not registered? <a href="/CreateAccount">Create an account</a>
-				</p>
+				<p class="message">Not registered? <a href="/CreateAccount">Create an account</a></p>
 			</form>
 		</div>
 	</div>
-
 
 </body>
 </html>
