add ajax request for person details view

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -121,6 +121,7 @@ body {
 }
 
 #badLogin {
+	font-family: "Roboto", sans-serif;
 	color: red;
 }
 </style>
@@ -141,7 +142,7 @@ body {
 		</div>
 	</div>
 	
-	<script>
+	<script type="text/javascript">
 		var query = window.location.hash.substr(1);
 
 		if(query == "badLogin") {
