--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="utf-8">
 <title>Patientenverwaltung</title>
 
 <style>
@@ -142,7 +142,7 @@ body {
 		</div>
 	</div>
 	
-	<script type="text/javascript">
+	<script>
 		var query = window.location.hash.substr(1);
 
 		if(query == "badLogin") {
