distinguish between user/admin roles, proper exception handling

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -137,7 +137,7 @@ body {
 				<button>login</button>
 				<p class="message">Not registered? <a href="/CreateAccount">Create an account</a></p>
 			</form>
-			<p>(Login as admin/god)</p>
+			<p>(Login as admin/god or bob/god)</p>
 			<div id="badLogin"></div>
 		</div>
 	</div>
